--- a/index.html
+++ b/index.html
@@ -114,42 +114,42 @@
   		<div class="projects-grid">
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Resume/">
-          			<img class="image-project-tile" src="img/resume.png" alt="Resume"/>
+          			<img class="image-project-tile" src="img/resume.PNG" alt="Resume"/>
           			<p class="title-project-tile">Resume</p>
         		</a>
       		</div>
 
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Tribute/">
-          			<img class="image-project-tile" src="img/tributePage.png" alt="Tribute Page"/>
+          			<img class="image-project-tile" src="img/tributePage.PNG" alt="Tribute Page"/>
           			<p class="title-project-tile">Tribute Page</p>
         		</a>
       		</div>
 
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Survey-Form/">
-          			<img class="image-project-tile" src="img/surveyForm.png" alt="Survey Form"/>
+          			<img class="image-project-tile" src="img/surveyForm.PNG" alt="Survey Form"/>
           			<p class="title-project-tile">Survey Form</p>
         		</a>
       		</div>
 
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Product-Landing/">
-          			<img class="image-project-tile" src="img/productLandingPage.png" alt="Product Landing Page"/>
+          			<img class="image-project-tile" src="img/productLandingPage.PNG" alt="Product Landing Page"/>
           			<p class="title-project-tile">Product Landing Page</p>
         		</a>
       		</div>
 
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Technical-Documentation/">
-          			<img class="image-project-tile" src="img/technicalDocumentation.png" alt="Technical Documentation"/>
+          			<img class="image-project-tile" src="img/technicalDocumentation.PNG" alt="Technical Documentation"/>
           			<p class="title-project-tile">Technical Documentation</p>
         		</a>
       		</div>
 
       		<div class="project-tile" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
         		<a class="link-project-tile" href="https://vedonic-bnd.github.io/Personal-Portfolio/">
-          			<img class="image-project-tile" src="img/personalPortfolio.png" alt="Personal Portfolio"/>
+          			<img class="image-project-tile" src="img/personalPortfolio.PNG" alt="Personal Portfolio"/>
           			<p class="title-project-tile">Personal Portfolio</p>
         		</a>
       		</div>
