--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	<section id="welcome-section" class="welcome-section">
 		<div class="container">
-			<h1 class="title-welcome-section"><span class="span-title">Hi!</span> I'am Venn Edward Nicolas.</h1>
+			<h1 class="title-welcome-section"><span class="span-title">Hi!</span> I am Venn Edward Nicolas.</h1>
       		<p class="paragraph-welcome-section">a BS Information Technology Student</p>
 		</div>
 
