--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 	<section id="welcome-section" class="welcome-section">
 		<div class="container">
-			<h1 class="title-welcome-section"><span class="span-title">Hi!</span> I am Venn Edward Nicolas.</h1>
-      		<p class="paragraph-welcome-section">a BS Information Technology Student</p>
+			<h1 class="title-welcome-section"><span class="span-title">Hi!</span> I'm Venn Edward Nicolas.</h1>
+      		<p class="paragraph-welcome-section">a Developer</p>
 		</div>
 
 		<a href="#" class="go-top"><i class="fas fa-arrow-up"></i></a>
@@ -87,8 +87,8 @@
 						<div class="owner-paragraph">
 							<div class="owner-par">
 								<h2 class="owner-name">Venn Edward D. Nicolas</h2>
-								<h2 class="owner-pos">BS Information Technology Student</h2>
-								<p class="owner-description">Hi! I'm Venn Edward D. Nicolas and im currently taking up Bachelor of Science in Information Technology at the University of the Cordilleras, Baguio. Im from the town of Rosales, province of Pangasinan. To know more about me, please click the button below.</p>
+								<h2 class="owner-pos">a Developer</h2>
+								<p class="owner-description">Hi! I'm Venn Edward D. Nicolas. A Developer from the town of Rosales, province of Pangasinan. To know more about me, please click the button below.</p>
 								<div class="btn">
 									<a href="https://www.facebook.com/Diagram.Veeeeenn/" class="btn abt-btn">About Me</a>
 								</div>
@@ -168,8 +168,8 @@
         		<h3 class="section-subtitle">Have any questions? We'd love to hear from you.</h3>
         		<div class="two-columns-grid">
         			<div class="container-fluid">
-        				<form class="form-group-contact" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" action="https://www.freecodecamp.com/email-submit" method="post">
-        					<input type="text" id="name" class="input-contact" placeholder="Your Name*"/>
+        				<form class="form-group-contact" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" action="mailto:vennedward.nicolas@gmail.com" method="post">
+        					<input type="text" id="name" class="input-contact" placeholder="Your Name*" required/>
         					<input type="email" id="email" class="input-contact" placeholder="E-mail Address*" required/>
         					<textarea type="text" id="Message" class="input-contact message" placeholder="Message"></textarea> 
         					<div class="btn btn-contact-container">
@@ -200,7 +200,7 @@
         					</div>
 
         					<ul class="icons icons-contact-us">
-								<li class="icon"><a class="icn icn-contact-us" href="https://www.linkedin.com/in/venn-edward-nicolas-63792715b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+								<li class="icon"><a class="icn icn-contact-us" href="https://www.linkedin.com/in/vedonic/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 								<li class="icon"><a class="icn icn-contact-us" href="https://www.facebook.com/Diagram.Veeeeenn/" target="_blank"><i class="fab fa-facebook"></i></a></li>
 								<li class="icon"><a class="icn icn-contact-us" href="https://www.instagram.com/vedonic_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 								<li class="icon"><a class="icn icn-contact-us" href="https://twitter.com/Vedonic" target="_blank"><i class="fab fa-twitter"></i></a></li>
